--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mongoose": "^5.4.22",
     "mongoose-simpletimestamps": "^1.0.2",
     "morgan": "^1.8.1",
+    "rate-limiter-flexible": "^1.0.2",
     "typescript": "^3.5.2",
     "walk": "^2.3.9"
   },
